--- a/test_fam_predictive_analytics_dcd_(version_2_video_game_sales).ipynb
+++ b/test_fam_predictive_analytics_dcd_(version_2_video_game_sales).ipynb
@@ -5276,11 +5276,7 @@
         "from sklearn.neighbors import KNeighborsRegressor\n",
         "from sklearn.metrics import mean_squared_error\n",
         "\n",
-        "# knn = KNeighborsRegressor(n_neighbors=6)\n",
         "knn = KNeighborsRegressor(n_neighbors=10)\n",
-        "# knn = KNeighborsRegressor(n_neighbors=17)\n",
-        "# knn = KNeighborsRegressor(n_neighbors=25)\n",
-        "# knn = KNeighborsRegressor(n_neighbors=50)\n",
         "knn.fit(X_train, y_train)\n",
         "\n",
         "y_pred_knn = knn.predict(X_train)\n",
@@ -5305,14 +5301,9 @@
       },
       "outputs": [],
       "source": [
-        "# Impor library yang dibutuhkan\n",
         "from sklearn.ensemble import RandomForestRegressor\n",
         "\n",
-        "# buat model prediksi\n",
-        "# RF = RandomForestRegressor(n_estimators=100, max_depth=64, random_state=55, n_jobs=-1)\n",
-        "# RF = RandomForestRegressor(n_estimators=50, max_depth=64, random_state=55, n_jobs=-1)\n",
         "RF = RandomForestRegressor(n_estimators=50, max_depth=16, random_state=55, n_jobs=-1)\n",
-        "# RF = RandomForestRegressor(n_estimators=100, max_depth=16, random_state=55, n_jobs=-1)\n",
         "RF.fit(X_train, y_train)\n",
         "\n",
         "y_pred_rf = RF.predict(X_train)\n",
@@ -5339,14 +5330,12 @@
       "source": [
         "from sklearn.ensemble import AdaBoostRegressor\n",
         "\n",
-        "# boosting = AdaBoostRegressor(learning_rate=0.05, random_state=55)\n",
-        "# boosting = AdaBoostRegressor(learning_rate=0.3, random_state=55)\n",
         "boosting = AdaBoostRegressor(learning_rate=0.005, random_state=55)\n",
         "boosting.fit(X_train, y_train)\n",
         "\n",
         "y_pred_b = boosting.predict(X_train)\n",
         "\n",
-        "models.loc['train_mse','Boosting'] = mean_squared_error(y_pred=y_pred_b, y_true=y_train)\n"
+        "models.loc['train_mse','Boosting'] = mean_squared_error(y_pred=y_pred_b, y_true=y_train)"
       ]
     },
     {
@@ -5368,8 +5357,6 @@
       "source": [
         "from sklearn.svm import SVR\n",
         "\n",
-        "# svr = SVR(kernel='poly') #10%\n",
-        "# svr = SVR(kernel='linear')\n",
         "svr = SVR()\n",
         "svr.fit(X_train, y_train)\n",
         "\n",
@@ -7506,21 +7493,23 @@
         "SMbNwzLUiGI7",
         "F375KpQriKQK",
         "rg2jmt1piR-B",
+        "frJK6mLQSICS",
         "Z8pK2gAfiUGx",
         "7o5nK5N0eKC-",
         "f8wjf1lWb-6w",
         "qTSizvvmf98f",
+        "g-B8uklygdZw",
+        "zsfh4bjMgfdh",
         "pKlEEe7Og0tu",
         "TgMAW8yng2ul",
-        "8rNZKErHhq-W",
-        "MEsAXUTH0VTl",
         "jqk_CNE8iBnX",
         "ua6_GAj8iQ5M",
         "Cm-GlvUciauZ",
-        "BqOrZ568x_dv"
+        "BqOrZ568x_dv",
+        "Pd-TKlR0GIwk"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyMsDhnXy5f9lpmRCz+gL0rl"
+      "authorship_tag": "ABX9TyMUmv4VeWtTMG1oQjKFxECN"
     },
     "kernelspec": {
       "display_name": "Python 3",
